--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "@types/swagger-ui-react": "^4.18.0",
     "autoprefixer": "10.4.14",
     "dotenv": "^16.3.1",
     "eslint": "8.43.0",
@@ -20,9 +21,13 @@
     "express": "^4.18.2",
     "mongodb": "^5.6.0",
     "next": "13.4.6",
+    "next-swagger-doc": "^0.4.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3",
+    "swagger-ui-react": "^5.1.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   }
