--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^5.6.0",
     "next": "13.4.6",
     "next-swagger-doc": "^0.4.0",
+    "openapi-types": "^12.1.3",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
